<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        tools:text="@string/mock_ingredient"
        android:id="@+id/tv_ingredient"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="wrap_content" />
    <TextView
        tools:text="@string/mock_quantity"
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"/>
    <TextView
        tools:text="@string/mock_measure"
        android:id="@+id/tv_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>
