<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/background_card"
    app:cardCornerRadius="4dp"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/mock_recipe_name"
                android:paddingBottom="5dp"
                android:paddingStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/text_title"
                 />
            <TextView
                tools:text="@string/mock_recipe_servings"
                android:id="@+id/tv_recipe_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                />

            <FrameLayout
                android:background="@color/bar"
                android:id="@+id/bar_split"
                app:layout_constraintTop_toBottomOf="@id/tv_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:paddingBottom="2dp"/>

            <TextView
                app:layout_constraintTop_toBottomOf="@id/bar_split"
                app:layout_constraintStart_toStartOf="@id/tv_recipe_name"
                tools:text="@string/mock_recipe_ingredients"
                android:id="@+id/tv_recipe_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"/>

            <TextView
                android:paddingEnd="5dp"
                app:layout_constraintTop_toBottomOf="@id/bar_split"
                app:layout_constraintEnd_toEndOf="@id/tv_recipe_servings"
                tools:text="@string/mock_recipe_steps"
                android:id="@+id/tv_recipe_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>

